--- a/index-2.html
+++ b/index-2.html
@@ -6,6 +6,7 @@
   <title>Personal Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="#"></script>
 </head>
 <body id="home">
@@ -33,11 +34,17 @@
       <p>Candidate Survey Form</p>
     </div>
     <div class="project-tile">
-      <a href="https://angelodiazdev.github.io/fcc-product-lp/" target="_blank"><img src="./img/og-knives.png" alt="pic"></a>
+      <a href="https://angelodiazdev.github.io/fcc-product-lp/" target="_blank"><img src="./img/og-knives.png" alt="original knives product landing page"></a>
       <p>Original Knives landing </p>
     </div>
-    <div class="project-tile">TEST</div>
-    <div class="project-tile">TEST</div>
+    <div class="project-tile">
+      <a href="https://angelodiazdev.github.io/fcc-technical-doc/" target="_blank"><img src="./img/js-tech.png" alt="Javascript technical documentation picture"></a>
+      <p>Javascript Technical Landing Page</p>
+    </div>
+    <div class="project-tile">
+      <a href="https://angelodiazdev.github.io/cs-photo-grid/" target="_blank"><img src="" alt="photo blog picture"></a>
+      <p>Simple Photo Blog</p>
+    </div>
     <div class="project-tile">TEST</div>
   </section>
 </body>
